fixing spacing issues

--- a/src/components/ProductDetail.css
+++ b/src/components/ProductDetail.css
@@ -21,7 +21,7 @@
 
 .thumbnail-gallery {
   display: flex;
-  gap: 26px;
+  gap: 22px;
   margin-top: 20px;
 }
 
@@ -48,8 +48,9 @@
 .product-info h3 {
   color: #68707d;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 10px;
+  margin-top: 25px;
 }
 
 .product-info h1 {
@@ -60,6 +61,7 @@
 .product-info p {
   color: #68707d;
   margin-bottom: 20px;
+  font-size: 14px;
 }
 
 .price {
@@ -79,7 +81,7 @@
   color: #fff;
   padding: 4px 8px;
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 10px;
 }
 
 .original-price {
